--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mr. lorem Ipsum</title>
 </head>
 <body>
+    <div>
+        <p style="background-color: red;">Lorem ipsum dolor sit  et dolore magna aliqua.</p>
+    </div>
     
 </body>
 </html>
