--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/styles.css">
     <title>Mr. lorem Ipsum</title>
 </head>
-<body>
-    <div>
-        <p style="background-color: red;">Lorem ipsum dolor sit  et dolore magna aliqua.</p>
+<body class="main-body">
+    
+    <div>  <!--mail body div-->
+        <div class="nav-bg-color"> <!--mail nav bar div-->
+            <p>Lorem ipsum dolor sit  et dolore magna aliqua.</p>
+        </div>
     </div>
     
 </body>
