--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/JS/script.js">
     <title>Matthew P Munger</title>
 </head>
 <body>
