add dropdown menu options to the apple menu in index.html for improved navigation and user interaction

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,15 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/JS/script.js">
     <title>Matthew P Munger</title>
 </head>
 <body>
     <!-- Menu Bar -->
     <div class="menu-bar">
-        <div class="menu-item">
+        <div class="menu-item apple-menu">
             <span class="apple-logo">🍎</span>
             <span>Matthew P Munger</span>
+            <div class="dropdown-menu">
+                <div class="menu-option">
+                    <span class="menu-icon">📄</span>
+                    <span>Read Me</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">⚙️</span>
+                    <span>Preferences</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">🗑️</span>
+                    <span>Empty Trash</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">🚪</span>
+                    <span>Logout</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">🔄</span>
+                    <span>Restart</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">⏹️</span>
+                    <span>Shutdown</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">💼</span>
+                    <span>Work</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">📁</span>
+                    <span>Open Recent</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">👁️</span>
+                    <span>View All</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">🎥</span>
+                    <span>Recent Video</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">📺</span>
+                    <span>My Videos</span>
+                </div>
+                <div class="menu-option">
+                    <span class="menu-icon">📚</span>
+                    <span>Recent Tutorial</span>
+                </div>
+            </div>
         </div>
         <div class="menu-item">
             <span>File</span>
